# programmieren-thu

./: .gitignore  Analyze.cpp  Analyze.h  CMakeLists.txt  Schein1_Aufgaben.cpp  alton_bekolli.cpp  alton_bekolli.h  gabriel_penkert.cpp  gabriel_penkert.h  jeremy_diem.cpp  jeremy_diem.h  main.cpp  serhat_guerel.cpp  serhat_guerel.h  valentin_talmon.cpp  valentin_talmon.h
Aufgabe1_3/: Analyze.cpp  Analyze.h  Schein1_Aufgaben.cpp
